--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,57 +1,57 @@
 header {
-    background-color: #f2e3e3;
-    padding: 10px;
-  }
-  
-  .navbar {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #f2f2f2;
   }
   
-  .navbar-brand .logo img {
-    height: 40px;
+  .logo-da-pagina {
+    max-width: 6vh;
   }
   
   .navbar-menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+    list-style-type: none;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
   }
   
   .navbar-menu li {
-    margin-right: 20px;
+    margin: 0 10px;
   }
   
   .navbar-menu li a {
-    color: #8c8c8c;
     text-decoration: none;
-    font-weight: bold;
+    color: #333;
+    font-size: 16px;
+    font-weight: 600;
     transition: color 0.3s ease;
   }
   
   .navbar-menu li a:hover {
-    color: #5d5d5d;
+    color: #ff9900;
+  }  
+  
+  .login-buttons {
+    display: flex;
+    align-items: center;
   }
   
-  .navbar-buttons button {
+  .login-button,
+  .register-button {
+    display: inline-block;
     padding: 10px 20px;
     margin-left: 10px;
-    border: none;
+    border-radius: 4px;
+    text-decoration: none;
     color: #fff;
-    font-weight: bold;
-    border-radius: 5px;
-    cursor: pointer;
+    background-color: #333;
     transition: background-color 0.3s ease;
   }
   
-  .navbar-buttons button.primary {
-    background-color: #527d87;
-  }
-  
-  .navbar-buttons button.primary:hover {
-    background-color: #41727a;
-  }
-
-  
+  .login-button:hover,
+  .register-button:hover {
+    background-color: #555;
+  }  
