--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,23 +1,19 @@
 <header>
-    <nav class="navbar">
-      <div class="container">
-        <div class="navbar-brand">
-          <a class="logo" routerLink="/">
-            <img src="caminho/para/sua/logo.png" alt="Logo da aplicação">
-          </a>
-        </div>
-        <ul class="navbar-menu">
-          <li><a routerLink="/">Início</a></li>
-          <li><a routerLink="#">Contas Pendentes</a></li>
-          <li><a routerLink="#">Áreas Comuns</a></li>
-          <li><a routerLink="#">Ocorrências</a></li>
-          <li><a routerLink="#">Avisos</a></li>
-          <li><a routerLink="#">Cadastrar Visitantes</a></li>
-        </ul>
-        <div class="navbar-buttons">
-          <button class="button" routerLink="/login">Login</button>
-          <button class="button primary" routerLink="/cadastrar">Registrar</button>
-        </div>
-      </div>
+    <div>
+      <img class="logo-da-pagina" src="../../../assets/img/lista-de-compras.png" alt="lista-de-tarefas">
+    </div>
+    <nav>
+      <ul class="navbar-menu">
+        <li><a routerLink="/">Início</a></li>
+        <li><a routerLink="#">Contas Pendentes</a></li>
+        <li><a routerLink="#">Áreas Comuns</a></li>
+        <li><a routerLink="#">Ocorrências</a></li>
+        <li><a routerLink="#">Avisos</a></li>
+        <li><a routerLink="#">Cadastrar Visitantes</a></li>
+      </ul>
     </nav>
-  </header>  
+    <div class="login-buttons">
+      <a class="login-button" routerLink="/login">Login</a>
+      <a class="register-button" routerLink="/cadastrar">Cadastrar</a>
+    </div>
+</header>  
