Refazendo o Header e Adicionando Background

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div>
-      <img class="logo-da-pagina" src="../../../assets/img/lista-de-compras.png" alt="lista-de-tarefas">
+      <!-- <img class="logo-da-pagina" src="../../../assets/img/icons8-home-96.png" alt="lista-de-tarefas"> -->
     </div>
     <nav>
       <ul class="navbar-menu">
@@ -16,4 +16,4 @@
       <a class="login-button" routerLink="/login">Login</a>
       <a class="register-button" routerLink="/cadastrar">Cadastrar</a>
     </div>
-</header>  
+</header>
