--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,7 +3,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #f2f2f2;
+    background-color: #fff;
   }
   
   .logo-da-pagina {
@@ -25,13 +25,29 @@ header {
   .navbar-menu li a {
     text-decoration: none;
     color: #333;
-    font-size: 16px;
-    font-weight: 600;
-    transition: color 0.3s ease;
+    font-weight: bolder;
+    font-size: 15px;
+    position: relative;
+  }
+
+  .navbar-menu li a:hover {
+    color: #FCD0A1;
   }
   
-  .navbar-menu li a:hover {
-    color: #ff9900;
+  .navbar-menu li a:before {
+    content: "";
+    position: absolute; 
+    bottom: -3px; 
+    left: 0;
+    width: 100%; 
+    height: 3px;
+    background-color: #FCD0A1;
+    transform: scaleX(0);
+    transition: transform 150ms;
+  }
+  
+  .navbar-menu li a:hover:before {
+    transform: scaleX(1);
   }  
   
   .login-buttons {
@@ -46,12 +62,14 @@ header {
     margin-left: 10px;
     border-radius: 4px;
     text-decoration: none;
-    color: #fff;
+    color: #fcd0a1;
     background-color: #333;
     transition: background-color 0.3s ease;
   }
   
   .login-button:hover,
   .register-button:hover {
-    background-color: #555;
+    background-color: #FCD0A1;
+    color: #fff;
+    font-weight: bolder;
   }  
