--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&display=swap');
+
 body {
+    background-image: url("src/assets/img/background-home.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
 }
