--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -7,7 +7,7 @@ header {
   }
   
   .logo-da-pagina {
-    max-width: 6vh;
+    max-width: 19vh;
   }
   
   .navbar-menu {
@@ -31,7 +31,7 @@ header {
   }
 
   .navbar-menu li a:hover {
-    color: #FCD0A1;
+    color: #848688;
   }
   
   .navbar-menu li a:before {
@@ -41,7 +41,7 @@ header {
     left: 0;
     width: 100%; 
     height: 3px;
-    background-color: #FCD0A1;
+    background-color: #848688;
     transform: scaleX(0);
     transition: transform 150ms;
   }
@@ -62,14 +62,14 @@ header {
     margin-left: 10px;
     border-radius: 4px;
     text-decoration: none;
-    color: #fcd0a1;
+    color: #fff;
     background-color: #333;
     transition: background-color 0.3s ease;
   }
   
   .login-button:hover,
   .register-button:hover {
-    background-color: #FCD0A1;
+    background-color: #848688;
     color: #fff;
     font-weight: bolder;
   }  
