Traçando as Rotas da Aplicação

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,11 +5,11 @@
     <nav>
       <ul class="navbar-menu">
         <li><a routerLink="/">Início</a></li>
-        <li><a routerLink="#">Contas Pendentes</a></li>
-        <li><a routerLink="#">Áreas Comuns</a></li>
-        <li><a routerLink="#">Ocorrências</a></li>
-        <li><a routerLink="#">Avisos</a></li>
-        <li><a routerLink="#">Cadastrar Visitantes</a></li>
+        <li><a routerLink="/contas">Contas Pendentes</a></li>
+        <li><a routerLink="/areas-comuns">Áreas Comuns</a></li>
+        <li><a routerLink="/ocorrencias">Ocorrências</a></li>
+        <li><a routerLink="/avisos">Avisos</a></li>
+        <li><a routerLink="/visitantes">Cadastrar Visitantes</a></li>
       </ul>
     </nav>
     <div class="login-buttons">
