Estilizando a página principal

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,6 @@
-<p>home works!</p>
+<section class="section-body-titulo">
+    <div class="container-titulo">
+        <h3>Home</h3>
+        <h1>Tasker Planner</h1>
+    </div>
+</section>
