--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&display=swap');
+
 body {
+    position: relative; /* Adicione esta propriedade para tornar o ::before posicionado em relação ao body */
     background-image: url("src/assets/img/background-home.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -9,4 +12,15 @@ body {
     padding: 0;
     height: 130em;
     font-family: 'Poppins', sans-serif;
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: -1;
 }
