--- a/src/app/pages/cadastrar/cadastrar.component.html
+++ b/src/app/pages/cadastrar/cadastrar.component.html
@@ -1,1 +1,32 @@
-<p>cadastrar works!</p>
+<div class="signup-container">
+    <form class="signup-form">
+        <!-- (ngSubmit)="register()" -->
+      <h2>Cadastrar</h2>
+      <div class="form-group">
+        <label for="name">Nome:</label>
+        <input type="text" id="name" name="name" required>
+        <!-- [(ngModel)]="name"  -->
+      </div>
+      <div class="form-group">
+        <label for="apartment">Apartamento:</label>
+        <input type="text" id="apartment" name="apartment" required>
+        <!-- [(ngModel)]="apartment" -->
+      </div>
+      <div class="form-group">
+        <label for="email">E-mail:</label>
+        <input type="email" id="email" name="email" required>
+        <!-- [(ngModel)]="email" -->
+      </div>
+      <div class="form-group">
+        <label for="password">Senha:</label>
+        <input type="password" id="password" name="password" required>
+        <!-- [(ngModel)]="password" -->
+      </div>
+      <div class="form-actions">
+        <button type="submit" class="signup-button">Cadastrar</button>
+      </div>
+      <div class="login-link">
+        <p>Já tem uma conta? <a href="#">Faça login</a></p>
+      </div>
+    </form>
+  </div>  
