--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -24,3 +24,9 @@
     color: #fff;
     margin: 0; /* Para remover a margem padrão dos elementos h1 */
 }
+
+.container-cardhome {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }  
