--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,5 +2,27 @@
     <div class="container-titulo">
         <h3>Home</h3>
         <h1>Tasker Planner</h1>
+        <app-home-button>
+            Explore Now
+        </app-home-button>
+    </div>
+    <div class="container-cardhome">
+        <app-card
+        imageUrl="../../../assets/img/imagem-card-1.jpg"
+        title="Gerenciamento de um Residencial"
+        description="Gerenciar um condomínio é uma tarefa complexa e desafiadora, que requer habilidades de liderança, comunicação eficaz e capacidade de resolver problemas. Um condomínio é uma comunidade com diversas unidades habitacionais e áreas comuns compartilhadas por todos os moradores.">
+        </app-card>
+
+        <app-card
+        imageUrl="../../../assets/img/imagem-card-2.jpg"
+        title="Convivência em um Residencial"
+        description="Conviver em um residencial é uma experiência única que requer respeito, compreensão e colaboração entre os moradores. Ao viver em um ambiente compartilhado, é essencial cultivar uma atmosfera harmoniosa e amigável para garantir o bem-estar de todos">
+        </app-card>
+
+        <app-card
+        imageUrl="../../../assets/img/imagem-card-3.jpg"
+        title="Viva com Segurança, Conforto e Comunidade"
+        description=" Morar em um residencial é uma escolha que proporciona inúmeras vantagens para uma vida plena e tranquila. No Residencial Fechado, a segurança é uma prioridade, com controle de acesso e monitoramento 24 horas, permitindo que você e sua família desfrutem de um ambiente protegido e confiável.">
+        </app-card>
     </div>
 </section>
