--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -24,5 +24,10 @@
         title="Viva com Segurança, Conforto e Comunidade"
         description=" Morar em um residencial é uma escolha que proporciona inúmeras vantagens para uma vida plena e tranquila. No Residencial Fechado, a segurança é uma prioridade, com controle de acesso e monitoramento 24 horas, permitindo que você e sua família desfrutem de um ambiente protegido e confiável.">
         </app-card>
+
+        <app-card
+        imageUrl="../../../assets/img/imagem-card-4.jpg"
+        title="Explore o Luxo e Conforto dos Residenciais de Classe Mundial"
+        description="Descubra uma experiência de moradia verdadeiramente extraordinária em nossos residenciais de classe mundial. Explore uma variedade de opções que vão desde apartamentos espaçosos e elegantes até casas sofisticadas em comunidades. "></app-card>
     </div>
 </section>
