--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
             Explore Now
         </app-home-button>
     </div>
-    <div class="container-cardhome">
+    <!-- <div class="container-cardhome">
         <app-card
         imageUrl="../../../assets/img/imagem-card-1.jpg"
         title="Gerenciamento de um Residencial"
@@ -29,5 +29,5 @@
         imageUrl="../../../assets/img/imagem-card-4.jpg"
         title="Explore o Luxo e Conforto dos Residenciais de Classe Mundial"
         description="Descubra uma experiência de moradia verdadeiramente extraordinária em nossos residenciais de classe mundial. Explore uma variedade de opções que vão desde apartamentos espaçosos e elegantes até casas sofisticadas em comunidades. "></app-card>
-    </div>
+    </div> -->
 </section>
