--- a/src/app/pages/areas-comuns/areas-comuns.component.html
+++ b/src/app/pages/areas-comuns/areas-comuns.component.html
@@ -1,1 +1,35 @@
-<p>areas-comuns works!</p>
+<div class="container">
+    <h1>Criar Reserva</h1>
+    <form class="signup-form" [formGroup]="formularioReserva" (ngSubmit)="EnviarFormularioReserva()">
+      <div class="form-group">
+        <label for="moradorId">ID do Morador:</label>
+        <input
+        type="number"
+        id="moradorId"
+        name="moradorId"
+        placeholder="Ex: 105"
+        required
+        formControlName="moradorId">
+      </div>
+      <div class="form-group">
+        <label for="dataHoraReserva">Data e Hora da Reserva:</label>
+        <input 
+        type="datetime-local" 
+        id="dataHoraReserva" 
+        name="dataHoraReserva" 
+        required
+        formControlName="dataHoraReserva">
+      </div>
+      <div class="form-group">
+        <label for="espacoComum">Espaço Comum:</label>
+        <input 
+        type="text" 
+        id="espacoComum" 
+        name="espacoComum" 
+        placeholder="Quiosque, Quadra, Salão de festas..." 
+        required
+        formControlName="espacoComum">
+      </div>
+      <button type="submit">Criar Reserva</button>
+    </form>
+  </div>
