--- a/src/app/pages/contas/contas.component.html
+++ b/src/app/pages/contas/contas.component.html
@@ -1,27 +1,42 @@
-<div class="mural">
-  <div class="card-list">
-    <div *ngFor="let conta of contas" class="card">
-      <div class="card-header">
-        Data de Vencimento {{ conta.dataVencimento | date }}
-        <p>ID da conta: {{ conta.id }}</p>
-      </div>
-      <div class="card-body">
-        <p><strong>Valor:</strong> R$ {{ conta.valor }}</p>
-        <p>
-          <strong>Status:</strong>
-          {{ conta.status == "Pago" ? "Paga" : "Pendente" }}
-        </p>
-
-        <button
-          (click)="pagarConta(conta)"
-          class="{{ conta.status == 'Pago' ? 'btn-pago' : 'btn-pagar'}}"
-          [disabled]="conta.status == 'Pago'"
-        > Pagar </button>
-
-        <button (click)="deleteConta(conta.id)" class="btn-apagar">
-          Apagar
-        </button>
+<section>
+  <div class="">
+    
+  </div>
+  
+  <div class="mural">
+    <div class="card-list">
+      <div *ngFor="let conta of contas" class="card">
+        <div class="card-header">
+          Data de Vencimento {{ conta.dataVencimento | date }}
+          <p>ID da conta: {{ conta.id }}</p>
+        </div>
+        <div class="card-body">
+  
+          <p class="area-valor">
+            <strong>Valor:</strong>
+            <span>
+              R$ {{ conta.valor }}
+            </span>
+          </p>
+  
+          <p class="{{conta.status == 'Pago' ? 'status-conta-pago' : 'status-conta-pendente'}}">
+            <strong>Status:</strong>
+            <span>
+              {{ conta.status == "Pago" ? "Paga" : "Pendente" }}
+            </span>
+          </p>
+  
+          <button
+            (click)="pagarConta(conta)"
+            class="{{ conta.status == 'Pago' ? 'btn-pago' : 'btn-pagar'}}"
+            [disabled]="conta.status == 'Pago'"
+          > Pagar </button>
+  
+          <button (click)="deleteConta(conta.id)" class="btn-apagar">
+            Apagar
+          </button>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</section>
