--- a/src/app/pages/areas-comuns/areas-comuns.component.css
+++ b/src/app/pages/areas-comuns/areas-comuns.component.css
@@ -69,3 +69,77 @@ button:hover {
   background-color: #f2dede;
   color: #a94442;
 }
+
+/* Section Get Reservas */
+
+.section-reservas {
+  padding: 20px;
+}
+
+.reservas-mural {
+  background-color: #f9f9f9;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  margin: auto;
+  width: 80%;
+}
+
+.reserva {
+  margin-bottom: 15px;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
+}
+
+.reserva:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.reserva-info {
+  padding: 10px;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  color: #333;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 18px;
+  margin-bottom: 5px;
+  color: #555;
+}
+
+.espaco-comum {
+  font-weight: 500;
+}
+
+.data-reserva {
+  font-weight: 500;
+}
+
+p {
+  margin: 0;
+  color: #666;
+}
+
+/* Mural shine effect */
+.reservas-mural::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  right: -10px;
+  bottom: -10px;
+  box-shadow: inset 0 0 50px rgba(255, 255, 255, 0.3);
+  pointer-events: none;
+  z-index: -1;
+  border-radius: 10px;
+}
+
+
