--- a/src/app/pages/ocorrencias/ocorrencias.component.css
+++ b/src/app/pages/ocorrencias/ocorrencias.component.css
@@ -5,7 +5,7 @@
 .ocorrencia-form {
     max-width: 60%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 4em;
     background-color: #f7f7f7;
     border: 1px solid #eaeaea;
     border-radius: 5px;
