Ajustando o Header na App

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-header-logado></app-header-logado>
+<app-header></app-header>
+<!-- <app-header-logado></app-header-logado> -->
 <router-outlet></router-outlet>
 <app-footer></app-footer>
