--- a/src/app/pages/avisos/avisos.component.html
+++ b/src/app/pages/avisos/avisos.component.html
@@ -1,1 +1,12 @@
-<p>avisos works!</p>
+<div class="aviso-mural-container">
+    <h1>Lista de Avisos</h1>
+    <div *ngIf="avisos.length === 0; else avisosList">
+      <p>Nenhum aviso cadastrado.</p>
+    </div>
+    <ng-template #avisosList>
+      <div *ngFor="let aviso of avisos" class="aviso-card">
+        <h3>{{ aviso.titulo }}</h3>
+        <p>{{ aviso.mensagem }}</p>
+      </div>
+    </ng-template>
+  </div>  
