Implementando fluxo de login

--- a/src/app/components/header-logado/header-logado.component.html
+++ b/src/app/components/header-logado/header-logado.component.html
@@ -19,6 +19,6 @@
       </span>
       <!-- Botão para deslogar ou acessar perfil -->
       <a class="profile-button" routerLink="/perfil">Perfil</a>
-      <a class="logout-button">Sair</a>
+      <a class="logout-button" (click)="deslogar()">Sair</a>
     </div>
 </header>  
