--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
-<!-- <app-header-logado></app-header-logado> -->
+<app-header *ngIf="!estaLogado"></app-header>
+<app-header-logado *ngIf="estaLogado"></app-header-logado>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
