Editando Logo da Header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
     <div>
-      <img class="logo-da-pagina" src="../../../assets/img/logo-predio.png" alt="lista-de-tarefas">
+      <img routerLink="/" class="logo-da-pagina" src="../../../assets/img/logo-predio.png" alt="lista-de-tarefas">
     </div>
     <nav>
     </nav>
