--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -4,7 +4,7 @@ header {
     align-items: center;
     padding: 20px;
     background-color: #fff;
-    box-shadow: 0 2px 8px rgba(255, 255, 255, 0.7); /* Adiciona a sombra branca reluzente */
+    box-shadow: 0 2px 8px rgba(255, 255, 255, 0.7);
   }
   
   .logo-da-pagina {
