--- a/src/app/pages/areas-comuns/areas-comuns.component.css
+++ b/src/app/pages/areas-comuns/areas-comuns.component.css
@@ -1,7 +1,17 @@
+.conteudo-reservas {
+  max-width: 85%;
+  width: 80%;
+  margin: 17em auto;
+  border-radius: 5px;
+  padding: 0.5em;
+  background-color: #fff;
+  box-shadow: 0 0 15px rgb(252, 249, 249); /* Adiciona uma sombra para parecer um campo flutuante */
+}
+
 .container {
   max-width: 85%;
   width: 50%;
-  margin: 20em auto;
+  margin: 9em auto;
   padding: 50px;
   background-color: #fff;
   border-radius: 5px;
@@ -74,6 +84,7 @@ button:hover {
 
 .section-reservas {
   padding: 20px;
+  margin-bottom: 5em;
 }
 
 .reservas-mural {
