--- a/src/app/pages/areas-comuns/areas-comuns.component.html
+++ b/src/app/pages/areas-comuns/areas-comuns.component.html
@@ -1,62 +1,64 @@
-<section class="section-formulario">
-    <div class="container">
-        <div class="success-box" *ngIf="reservado">
-            <i class="fas fa-check-circle"></i>
-            <h3>Reservado com Sucesso!</h3>
+<main class="conteudo-reservas">
+  <section class="section-formulario">
+      <div class="container">
+          <div class="success-box" *ngIf="reservado">
+              <i class="fas fa-check-circle"></i>
+              <h3>Reservado com Sucesso!</h3>
+          </div>
+          <h1>Criar Reserva</h1>
+          <form class="signup-form" [formGroup]="formularioReserva" (ngSubmit)="verificarReserva()">
+            <div class="form-group">
+              <label for="moradorId">ID do Morador:</label>
+              <input
+              type="number"
+              id="moradorId"
+              name="moradorId"
+              placeholder="Ex: 105"
+              required
+              formControlName="moradorId">
+            </div>
+            <div class="form-group">
+              <label for="dataHoraReserva">Data e Hora da Reserva:</label>
+              <input 
+              type="datetime-local" 
+              id="dataHoraReserva" 
+              name="dataHoraReserva" 
+              required
+              formControlName="dataHoraReserva"
+              >
+            </div>
+            <div class="form-group">
+              <label for="espacoComum">Espaço Comum:</label>
+              <input 
+              type="text" 
+              id="espacoComum" 
+              name="espacoComum" 
+              placeholder="Quiosque, Quadra, Salão de festas..." 
+              required
+              formControlName="espacoComum">
+            </div>
+            <button 
+            type="submit"
+            >Criar Reserva</button>
+            <span *ngIf="reservaExistente || reservaInvalida" class="error-box">
+              <i class="fas fa-exclamation-circle"></i>
+              <strong *ngIf="reservaExistente">Essa data já está reservada, por favor, escolha outra!</strong>
+              <strong *ngIf="reservaInvalida">Você não pode cadastrar uma data no passado!</strong>
+            </span>
+          </form>
         </div>
-        <h1>Criar Reserva</h1>
-        <form class="signup-form" [formGroup]="formularioReserva" (ngSubmit)="verificarReserva()">
-          <div class="form-group">
-            <label for="moradorId">ID do Morador:</label>
-            <input
-            type="number"
-            id="moradorId"
-            name="moradorId"
-            placeholder="Ex: 105"
-            required
-            formControlName="moradorId">
+  </section>
+  
+  <section class="section-reservas">
+      <div class="reservas-mural">
+        <h2>Reservas Feitas</h2>
+        <div class="reserva" *ngFor="let reserva of reservasDisponiveis">
+          <div class="reserva-info">
+            <h3>ID do Morador: {{ reserva.moradorId }}</h3>
+            <p class="data-reserva">Data da Reserva: {{ reserva.dataHoraReserva | date:'dd/MM/yyyy' }}</p>
+            <p class="espaco-comum">Espaço Comum: {{ reserva.espacoComum | titlecase }}</p>
           </div>
-          <div class="form-group">
-            <label for="dataHoraReserva">Data e Hora da Reserva:</label>
-            <input 
-            type="datetime-local" 
-            id="dataHoraReserva" 
-            name="dataHoraReserva" 
-            required
-            formControlName="dataHoraReserva"
-            >
-          </div>
-          <div class="form-group">
-            <label for="espacoComum">Espaço Comum:</label>
-            <input 
-            type="text" 
-            id="espacoComum" 
-            name="espacoComum" 
-            placeholder="Quiosque, Quadra, Salão de festas..." 
-            required
-            formControlName="espacoComum">
-          </div>
-          <button 
-          type="submit"
-          >Criar Reserva</button>
-          <span *ngIf="reservaExistente || reservaInvalida" class="error-box">
-            <i class="fas fa-exclamation-circle"></i>
-            <strong *ngIf="reservaExistente">Essa data já está reservada, por favor, escolha outra!</strong>
-            <strong *ngIf="reservaInvalida">Você não pode cadastrar uma data no passado!</strong>
-          </span>
-        </form>
-      </div>
-</section>
-
-<section class="section-reservas">
-    <div class="reservas-mural">
-      <h2>Reservas Feitas!</h2>
-      <div class="reserva" *ngFor="let reserva of reservasDisponiveis">
-        <div class="reserva-info">
-          <h3>ID do Morador: {{ reserva.moradorId }}</h3>
-          <p class="data-reserva">Data da Reserva: {{ reserva.dataHoraReserva | date:'dd/MM/yyyy' }}</p>
-          <p class="espaco-comum">Espaço Comum: {{ reserva.espacoComum | titlecase }}</p>
         </div>
       </div>
-    </div>
-</section>
+  </section>
+</main>
