--- a/src/app/pages/cadastrar/cadastrar.component.css
+++ b/src/app/pages/cadastrar/cadastrar.component.css
@@ -1,3 +1,4 @@
+
 .signup-container {
     display: flex;
     justify-content: center;
@@ -10,8 +11,8 @@
     padding: 50px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    width: 400px;
-    max-width: 100%;
+    width: 57%;
+    max-width: 60%;
   }
   
   .signup-form h2 {
