--- a/src/app/pages/visitantes/visitantes.component.html
+++ b/src/app/pages/visitantes/visitantes.component.html
@@ -1,54 +1,56 @@
-<section>
-    <div class="visitante-form-container">
-      <h2>Cadastrar Visitante</h2>
-      <form [formGroup]="formularioVisitante" (ngSubmit)="CadastrarVisitante()">
-        <div class="form-group">
-          <label for="moradorId">ID do Morador</label>
-          <input
-            type="number"
-            id="moradorId"
-            name="moradorId"
-            formControlName="moradorId"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="nomeVisitante">Nome do Visitante</label>
-          <input
-            type="text"
-            id="nomeVisitante"
-            name="nomeVisitante"
-            formControlName="nomeVisitante"
-            required
-          />
-        </div>
-        <div class="form-group">
-          <label for="dataHoraSaida">Data e Hora de Saída</label>
-          <input
-            type="datetime-local"
-            id="dataHoraSaida"
-            name="dataHoraSaida"
-            formControlName="dataHoraSaida"
-            required
-          />
-        </div>
-        <button type="submit">Cadastrar</button>
-        <br>
-        <span *ngIf="visitanteCadastrado" class="alert-cadastrado">
-            <strong>Visitante cadastrado com sucesso!</strong>
-        </span>
-      </form>
-    </div>
-</section>
-<section>
-    <div class="visitante-mural-container">
-        <!-- <h2>Visitantes do Morador ID: {{ moradorId }}</h2> -->
-        <div class="visitante-list">
-            <div *ngFor="let visitante of visitantes" class="visitante-card">
-            <h2>Visitante N° de identificação: {{ visitante.id }}</h2>
-            <h3>{{ visitante.nomeVisitante | titlecase }}</h3>
-            <p>Data e Hora de Saída: {{ visitante.dataHoraSaida }}</p>
+<main class="conteudo-visitantes">
+  <section>
+      <div class="visitante-form-container">
+        <h2>Cadastrar Visitante</h2>
+        <form [formGroup]="formularioVisitante" (ngSubmit)="CadastrarVisitante()">
+          <div class="form-group">
+            <label for="moradorId">ID do Morador</label>
+            <input
+              type="number"
+              id="moradorId"
+              name="moradorId"
+              formControlName="moradorId"
+              required
+            />
           </div>
-        </div>
-      </div>      
-</section>
+          <div class="form-group">
+            <label for="nomeVisitante">Nome do Visitante</label>
+            <input
+              type="text"
+              id="nomeVisitante"
+              name="nomeVisitante"
+              formControlName="nomeVisitante"
+              required
+            />
+          </div>
+          <div class="form-group">
+            <label for="dataHoraSaida">Data e Hora de Saída</label>
+            <input
+              type="datetime-local"
+              id="dataHoraSaida"
+              name="dataHoraSaida"
+              formControlName="dataHoraSaida"
+              required
+            />
+          </div>
+          <button type="submit">Cadastrar</button>
+          <br>
+          <span *ngIf="visitanteCadastrado" class="alert-cadastrado">
+              <strong>Visitante cadastrado com sucesso!</strong>
+          </span>
+        </form>
+      </div>
+  </section>
+  <section>
+      <div class="visitante-mural-container">
+          <!-- <h2>Visitantes do Morador ID: {{ moradorId }}</h2> -->
+          <div class="visitante-list">
+              <div *ngFor="let visitante of visitantes" class="visitante-card">
+              <h2>Visitante N° de identificação: {{ visitante.id }}</h2>
+              <h3>{{ visitante.nomeVisitante | titlecase }}</h3>
+              <p>Data e Hora de Saída: {{ visitante.dataHoraSaida }}</p>
+            </div>
+          </div>
+        </div>      
+  </section>
+</main>
