--- a/src/app/pages/visitantes/visitantes.component.css
+++ b/src/app/pages/visitantes/visitantes.component.css
@@ -60,34 +60,50 @@
     color: #45a049;
   }
 
-  /* Mural de Visitantes */
+/* Mural de Visitantes */
 
-  .visitante-mural-container {
-    max-width: 600px;
-    margin: 0 auto;
+.visitante-mural-container {
+  max-width: 600px;
+  margin: 0 auto;
+  margin-bottom: 8em;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.visitante-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.visitante-card {
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+
+  /* Adicionar a animação de fade in */
+  animation-name: fadeIn;
+  animation-duration: 1s;
+}
+
+/* Efeito hover para escala e sombra */
+.visitante-card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Definir a animação de fade in */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  
-  h2 {
-    text-align: center;
-    margin-bottom: 20px;
+  to {
+    opacity: 1;
   }
-  
-  .visitante-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-  }
-  
-  .visitante-card {
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
-  }
-  
-  .visitante-card:hover {
-    transform: scale(1.05);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
+}
   
