Ajustando as pages

--- a/src/app/components/header-logado/header-logado.component.html
+++ b/src/app/components/header-logado/header-logado.component.html
@@ -4,7 +4,7 @@
   </div>
   <nav>
     <ul class="navbar-menu">
-      <li><a routerLink="/contas">Contas Pendentes</a></li>
+      <li><a routerLink="/contas">Contas</a></li>
       <li><a routerLink="/areas-comuns">Áreas Comuns</a></li>
       <li><a routerLink="/ocorrencias">Ocorrências</a></li>
       <li><a routerLink="/avisos">Avisos</a></li>
