--- a/src/app/pages/areas-comuns/areas-comuns.component.css
+++ b/src/app/pages/areas-comuns/areas-comuns.component.css
@@ -4,7 +4,7 @@
   margin: 20em auto;
   border-radius: 5px;
   padding: 0.5em;
-  background-color: #fff;
+  background-color: #ddd8d8;
   box-shadow: 0 0 9px 0px rgb(252, 249, 249);
 }
 
