--- a/src/app/pages/ocorrencias/ocorrencias.component.html
+++ b/src/app/pages/ocorrencias/ocorrencias.component.html
@@ -3,17 +3,6 @@
       <div class="container-ocorrencia">
           <form class="ocorrencia-form" [formGroup]="formularioOcorrencia" (ngSubmit)="EnviarFormularioOcorrencia()">
             <h2>Registro de Ocorrência</h2>
-            
-            <div class="form-group">
-              <label for="moradorId">ID do Morador:</label>
-              <input 
-              type="number" 
-              id="moradorId" 
-              class="form-control" 
-              name="moradorId"
-              formControlName="moradorId" 
-              required>
-            </div>
         
             <div class="form-group">
               <label for="descricao">Descrição:</label>
@@ -38,14 +27,33 @@
           </form>
         </div>
   </section>
+
+  <section class="mural-morador-ocorrencia" *ngIf="ocorrenciasExistem">
+    <div class="container-mural">
+      <h2>Minhas Ocorrências</h2>
+      <div class="ocorrencias">
+        <div class="ocorrencia" *ngFor="let ocorrencia of ocorrenciasDoMorador">
+          <div class="ocorrencia-header">
+            <span class="ocorrencia-id"><strong>ID N°:</strong> {{ ocorrencia.id }}</span>
+            <br>
+            <span class="ocorrencia-data"><strong>Hora do Registro: </strong>{{ ocorrencia.dataHoraRegistro | date: 'dd/MM/yyyy HH:mm' }}</span>
+          </div>
+          <div class="ocorrencia-descricao">{{ ocorrencia.descricao }}</div>
+          <button class="deletar-ocorrencia" (click)="deletarOcorrencia(ocorrencia.id)">Deletar</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section class="mural-ocorrencia">
       <div class="container-mural">
           <h2>Mural de Ocorrências</h2>
           <div class="ocorrencias">
             <div class="ocorrencia" *ngFor="let ocorrencia of ocorrenciasRegistradas">
               <div class="ocorrencia-header">
-                <span class="ocorrencia-id">ID N°: {{ ocorrencia.id }}</span>
-                <span class="ocorrencia-data">{{ ocorrencia.dataHoraRegistro | date: 'dd/MM/yyyy HH:mm' }}</span>
+                <span class="ocorrencia-id"><strong>ID N°:</strong> {{ ocorrencia.id }}</span>
+                <br>
+                <span class="ocorrencia-data"><strong>Hora do Registro: </strong>{{ ocorrencia.dataHoraRegistro | date: 'dd/MM/yyyy HH:mm' }}</span>
               </div>
               <div class="ocorrencia-descricao">{{ ocorrencia.descricao }}</div>
             </div>
