--- a/src/styles.css
+++ b/src/styles.css
@@ -3,13 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,200&display=swap');
 
 body {
-    position: relative; /* Adicione esta propriedade para tornar o ::before posicionado em relação ao body */
+    position: relative;
     background-image: url("src/assets/img/background-home.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0;
     padding: 0;
-    height: 220em;
+    height: 350em;
     font-family: 'Poppins', sans-serif;
 }
 
