--- a/src/app/components/home-button/home-button.component.html
+++ b/src/app/components/home-button/home-button.component.html
@@ -1,3 +1,3 @@
-<div routerLink="/cadastrar" class="button-container">
+<div routerLink="/contas" class="button-container">
     <ng-content></ng-content>
 </div>
